--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,43 @@ div#buttonGlass
     border-radius: 35px;
     -webkit-border-radius: 35px;
 }
+div#buttonGlassRight
+{
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+    margin-top: 15px;
+    border: 2px solid #fff;
+    float: right;
+    background: radial-gradient(#141818, #444444);
+    background: -webkit-radial-gradient(#141818, #444444);
+    border-radius: 35px;
+    -webkit-border-radius: 35px;
+}
+
+
+div#fieldNeon
+{
+    width: 30px;
+    float: left;
+    margin-top: 17px;
+}
+
+
+div#reflectRight
+{
+    width: 10px;
+    height: 5px;
+    margin: 3px 0 0 15px;
+    background: #fff;
+    opacity: 0.6;
+
+    border-radius: 15px 9px;
+    -webkit-border-radius: 15px 9px;
+    -moz-border-radius: 15px 9px;
+       -o-border-radius: 15px 9px;
+            
+}
 
 div#reflect
 {
@@ -150,10 +187,15 @@ div#reflect
 }
 
 div#z-logo {
- margin-top: -10px;
-margin-left: 10px;
-}
+    margin-top: -10px;
+   margin-left: 10px;
+   }
 
+   div#z-user {
+    margin-top: -5px;
+   margin-left: 4px;
+   }
+      
 div#miniButtonGlass1
 {
     width: 20px;
@@ -291,16 +333,18 @@ div#screen
 
 div#picture
 {
-    height: 190px;
+    height: 250px;
     width: 254px;
     margin-top: 20px;
     margin-bottom: 9px;
     background-size: 254px 250px;
-    background-image: url("https://holozing.com/images/creatures/fire_wolf.png");
-    border: 3px solid #494949;
-    clear: both;
-    padding-top: 60px;
 
+    border: 3px solid #494949;
+    border-right: 3px solid #b4b4b4;
+    border-bottom: 3px solid #b4b4b4;
+    clear: both;
+    padding-top: 5px;
+    padding-left: 5px;
     border-radius: 15px;
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
@@ -375,7 +419,6 @@ div.sp
     height: 3px;
     margin-bottom: 5px;
     background-color: #494949;
-
     border-radius: 30px;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
@@ -465,7 +508,13 @@ div#stats
     -webkit-box-shadow: 0 0 20px #003300 inset;
 }
 
-
+div#reset
+{
+    position: absolute;
+    top: 450px;
+    left: 75px;
+    z-index: 1;
+}
 .search {
   width: 300px;
   z-index: 1;
@@ -531,4 +580,111 @@ div#right, div#screen
 }
 
 
+}
+
+@keyframes parpadeo {
+    0% {box-shadow: 0 0 5px #08f, 0 0 10px #08f, 0 0 15px #08f, 0 0 20px #08f;}
+    50% {box-shadow: none;}
+    100% {box-shadow: 0 0 5px #08f, 0 0 10px #08f, 0 0 15px #08f, 0 0 20px #08f;}
+  }
+  
+  input[type="text"].username {
+    border: 0.1px solid rgba(255, 20, 20, 0);
+    border-bottom: 2.1px solid rgb(20, 169, 255);
+    color: white;
+    height: 30px;
+    background-color: 520dc0;
+    border-radius: 10px;
+    
+    box-shadow: 0 0 5px #08f, 0 0 10px #08f, 0 0 15px #08f, 0 0 20px #08f;
+  }
+  .neon {
+    animation: parpadeo 1s infinite;
+}
+.rounded {
+    border-radius: 15px;
+}
+
+  ::placeholder { color: white; }
+
+  .FlexContainer {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    width: 100%;
+    
+    overflow: auto;
+    flex-direction: row;
+}
+
+.FlexContainer div {
+    width: 98%;
+    height: 30px;
+    margin: 0px;
+    padding: 5px;
+}
+.statsFlexContainer {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
+  width: 100%;
+  
+  overflow: auto;
+  flex-direction: row;
+}
+
+.statsFlexContainer div {
+  width: 98%;
+  height: 40px;
+  margin: 10px;
+  padding: 5px;
+  
+  padding-top: 30px;
+  box-shadow: 5px 5px 2px 0px rgba(46, 46, 46, 0.411);;
+  color: #001c91;
+  text-align: center;
+  align-content: center;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, .3);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  border: 1.5px solid rgba(209, 213, 219, 0.3);
+}
+div#picturebg {
+    
+    background: radial-gradient(#05fbfb, #29abe3);
+    background: -webkit-radial-gradient(#05fbfb, #29abe3);
+    box-shadow: 0 0 20px #d6d6d6 inset;
+    -webkit-box-shadow: 0 0 20px #d6d6d6 inset;
+}
+
+.claimButton {
+    
+    background-color: #1100aa;
+    border-radius: 10px;
+    width: 70px;
+    height: 40px;
+    color: white;
+    border-bottom: 2.1px solid rgb(20, 169, 255);
+    border-top: 2.1px solid rgb(25, 103, 148);
+    border-left: 2.1px solid rgb(39, 137, 194);
+    box-shadow: 0 0 5px #08f, 0 0 10px #08f, 0 0 15px #08f, 0 0 20px #08f;
+}
+
+.content {
+    text-align: center;
+}
+#successful {
+    padding-top: 40px;
+    color: #09005e;
+    display: none;
+}
+
+#ClaimPanel {
+    color: #09005e;
+    display: none;
 }
