--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,8 @@
 
 body {
     background: linear-gradient(1deg, #111827, #23344d);
-    background-size: 400% 400%;
-    -webkit-animation: AnimationName 30s ease infinite;
-    -moz-animation: AnimationName 30s ease infinite;
-    animation: AnimationName 30s ease infinite;
     font-family: Chakra Petch,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji";
 }
-
-@-webkit-keyframes AnimationName {
-    0%{background-position:64% 0%}
-    50%{background-position:37% 100%}
-    100%{background-position:64% 0%}
-}
-@-moz-keyframes AnimationName {
-    0%{background-position:64% 0%}
-    50%{background-position:37% 100%}
-    100%{background-position:64% 0%}
-}
-@keyframes AnimationName {
-    0%{background-position:64% 0%}
-    50%{background-position:37% 100%}
-    100%{background-position:64% 0%}
-}
-
 
 @media all {
 
@@ -593,7 +572,7 @@ div#right, div#screen
     border-bottom: 2.1px solid rgb(20, 169, 255);
     color: white;
     height: 30px;
-    background-color: 520dc0;
+    background-color: #520dc0;
     border-radius: 10px;
     
     box-shadow: 0 0 5px #08f, 0 0 10px #08f, 0 0 15px #08f, 0 0 20px #08f;
@@ -654,7 +633,7 @@ div#right, div#screen
   backdrop-filter: blur(5px);
   border: 1.5px solid rgba(209, 213, 219, 0.3);
 }
-div#picturebg {
+.picturebgbs {
     
     background: radial-gradient(#05fbfb, #29abe3);
     background: -webkit-radial-gradient(#05fbfb, #29abe3);
@@ -687,4 +666,17 @@ div#picturebg {
 #ClaimPanel {
     color: #09005e;
     display: none;
+}
+#TokenInfoPanel {
+    color: #09005e;
+    display: none;
+}
+#WelcomePanel{
+    color: #09005e;
+    font-size: small;
+}
+
+#ProfilePanel
+{
+     display: none;
 }
