--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,32 @@
 
+canvas {
+    border:1px solid #d3d3d3;
+    border-radius: 15px;
+    background-image: url("../img/bggame.png");
+	font-family: Impact, Charcoal, sans-serif;
+	align:center;
+    margin-top: -5px;
+    margin-left: -5px;
+	background-size: cover;
+  opacity: 0.8;
+}
+#classPanel {
+    display: none;
+    position: absolute;
+    left: 120px;
+    top: 130px;
+    z-index: 1;
+}
+#game {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(300deg,rgb(1, 6, 82),rgb(135, 186, 245),#382e64);
+  background-size: 180% 180%;
+  animation: gradient-animation 2s ease infinite;
+  display: none;
+}
+
+
 body {
     background: linear-gradient(1deg, #111827, #23344d);
     font-family: Chakra Petch,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji";
