--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 canvas {
     border:1px solid #d3d3d3;
     border-radius: 15px;
@@ -157,6 +156,7 @@ div#buttonGlassRight
 
 div#fieldNeon
 {
+    
     width: 30px;
     float: left;
     margin-top: 17px;
@@ -559,24 +559,78 @@ div#reset
 }
 
 /*Resize the wrap to see the search bar change!*/
+
 div#alert {
     display: none;
 }
 
 }
+div.hamburger, section.mFlexContainer {
+    display: none !important;
+}
+
 
 @media handheld and (orientation:portrait), (max-width:768px) {
 
+    
+div.hamburger, section.mFlexContainer {
+    display: block !important;
+}
 div#holodex
 {
     width: 400px;
+    height: 80%;
 }
 
+
+div#buttonGlassRight
+{
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+    margin-top: 15px;
+    border: 2px solid #fff;
+    background: radial-gradient(#141818, #444444);
+    background: -webkit-radial-gradient(#141818, #444444);
+    border-radius: 35px;
+    -webkit-border-radius: 35px;
+    
+    z-index: 1;
+}
+
+input#fieldNeon {
+    width: 135px;
+    margin-left:-138px ;
+}
+
+
+div#z-user {
+    margin-top: -27px;
+   margin-left: 4px;
+}
+     
+
+.mFlexContainer {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    align-content: flex-end;
+    width: 100%;
+    
+    overflow: auto;
+    
+}
+
+.mFlexContainer div {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+}
 
 div#left
 {
     width: 400px;
-    height: 500px;
+    height: 80%;
     float: left;
     position: relative;
     z-index: 1;
@@ -590,8 +644,9 @@ div#alert {
     z-index: 1;
     color: white;
 }
-	
-div#right, div#screen
+
+
+div#right
 {
     display: none;
 }
@@ -717,4 +772,102 @@ div#right, div#screen
 #ProfilePanel
 {
      display: none;
+}
+
+.hamburger{
+	position:fixed;
+  background-color:transparent;
+	right:0;
+	bottom:0;
+	height:30px;
+	width:30px;
+	padding:20px 20px;
+	-webkit-transform:translate3d(0, 0, 0);
+	transform:translate3d(0, 0, 0);
+	-webkit-transition:-webkit-transform 0.25s cubic-bezier(0.05, 1.04, 0.72, 0.98);
+	transition:transform 0.25s cubic-bezier(0.05, 1.04, 0.72, 0.98);
+	z-index:1002;
+	cursor:pointer;
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none
+}
+.hamburger.is-active{
+  background-color:none;
+}
+._layer{
+	background:white;
+	margin-bottom:4px;
+	border-radius:2px;
+	width:28px;
+	height:4px;
+	opacity:1;
+	-webkit-transform:translate3d(0, 0, 0);
+	transform:translate3d(0, 0, 0);
+	-webkit-transition:all 0.25s cubic-bezier(0.05, 1.04, 0.72, 0.98);
+	transition:all 0.25s cubic-bezier(0.05, 1.04, 0.72, 0.98);
+}
+.hamburger:hover .-top{
+	-webkit-transform:translateY(-100%);
+	-ms-transform:translateY(-100%);
+	transform:translateY(-100%);
+}
+.hamburger:hover .-bottom{
+	-webkit-transform:translateY(50%);
+	-ms-transform:translateY(100%);
+	transform:translateY(100%);
+	}
+.hamburger.is-active .-top{
+	-webkit-transform:translateY(200%) rotate(45deg) !important;
+	-ms-transform:translateY(200%) rotate(45deg) !important;
+	transform:translateY(200%) rotate(45deg) !important;
+}
+.hamburger.is-active .-mid{
+	opacity:0;
+}
+.hamburger.is-active .-bottom{
+	-webkit-transform:translateY(-200%) rotate(135deg) !important;
+	-ms-transform:translateY(-200%) rotate(135deg) !important;
+	transform:translateY(-200%) rotate(135deg) !important;
+}
+
+.menuppal.is_active{
+  transform: translate3d(0px, 0px, 0px);
+}
+.menuppal{
+   background-color: rgba(255, 255, 255, 0.95);
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    overflow-y: scroll;
+    position: fixed;
+    top: 0;
+    transform: translate3d(0px, -100%, 0px);
+    transition: transform 0.35s cubic-bezier(0.05, 1.04, 0.72, 0.98) 0s;
+    width: 100%;
+    z-index: 1001;
+}
+.menuppal ul{
+  margin:0;padding:0;
+}
+.menuppal ul li { 
+  list-style: none;
+	text-align:center;
+	font-family: Verdadna, Arial, Helvetica;
+	color:white;
+	font-size:1.5rem;
+	line-height:3em;
+	height:3em;
+  color:#369;
+	text-transform:none;
+	font-weight:bold;
+}
+.menuppal ul li a{
+  text-decoration:none;
+  color:#369;
+}
+.menuppal ul li a:hover{
+  text-decoration:none;
+  color:#333;
 }
